Bug 322896 - Transparency mask shifts after crop and save-open
Summary: Transparency mask shifts after crop and save-open
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-27 19:04 UTC by ALeXeY
Modified: 2013-08-26 08:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Before crop (63.40 KB, application/octet-stream)
2013-07-27 19:05 UTC, ALeXeY
Details
After crop (41.91 KB, application/octet-stream)
2013-07-27 19:06 UTC, ALeXeY
Details
snapshots (85.50 KB, image/png)
2013-07-27 19:16 UTC, ALeXeY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ALeXeY 2013-07-27 19:04:25 UTC
Transparency mask shifts from it's position after crop and save-reopen. Interesting, that before close the file, the mask position is fine. So, I decided to mark it as "load & save" bug. 

..I remember similar problem from previous version of Krita and I'm sorry if the bug is already here (but I can't find it).

Reproducible: Always
Comment 1 ALeXeY 2013-07-27 19:05:42 UTC
Created attachment 81388 [details]
Before crop
Comment 2 ALeXeY 2013-07-27 19:06:18 UTC
Created attachment 81389 [details]
After crop
Comment 3 ALeXeY 2013-07-27 19:16:48 UTC
Created attachment 81390 [details]
snapshots
Comment 4 Dmitry Kazakov 2013-08-25 17:11:55 UTC
Yep, it looks like the offset created by the move tool is not saved properly.
Comment 5 Dmitry Kazakov 2013-08-26 08:33:29 UTC
Git commit d664130d7235a22a5e1d066431e5b5d3efcb7d7d by Dmitry Kazakov.
Committed on 26/08/2013 at 08:31.
Pushed by dkazakov into branch 'master'.

Fixed a mask offset loading bug

There is something a bit weird in the design of Kra format. The offset
of the paint device belongs to the node, but not to the device itself.
This causes problems when the actual paint device of the node is created
in a deferred way, like it is done for KisCloneLayer's and KisMask's.

M  +32   -2    krita/image/kis_mask.cc
M  +35   -0    krita/image/tests/kis_mask_test.cpp
M  +2    -0    krita/image/tests/kis_mask_test.h

http://commits.kde.org/calligra/d664130d7235a22a5e1d066431e5b5d3efcb7d7d