Fixed a mask offset loading bug

There is something a bit weird in the design of Kra format. The offset
of the paint device belongs to the node, but not to the device itself.
This causes problems when the actual paint device of the node is created
in a deferred way, like it is done for KisCloneLayer's and KisMask's.

BUG:322896